--- a/index.html
+++ b/index.html
@@ -14,20 +14,20 @@
 </head>
 <body>
     <div id="container">
-        <img id="cover" src="./images/illustration-sign-up-desktop.svg" alt="">
+        <img id="cover" src="./illustration-sign-up-desktop.svg" alt="">
         <h1>Stay Updated!</h1>
         <p>Join 60,000+ product managers receiving monthly updates on:</p>
         <ul>
-            <li><img src="./images/icon-list.svg" alt="">Poduct discovery and building what matters</li>
-            <li><img src="./images/icon-list.svg" alt="">Measuring to ensure updates are a success</li>
-            <li><img src="./images/icon-list.svg" alt="">And much more!</li>
+            <li><img src="./icon-list.svg" alt="">Poduct discovery and building what matters</li>
+            <li><img src="./icon-list.svg" alt="">Measuring to ensure updates are a success</li>
+            <li><img src="./icon-list.svg" alt="">And much more!</li>
         </ul>
         <label for="email">Email address</label><br>
         <input type="email" name="email" id="email" placeholder="email@company.com"><br>
         <button id="subscribe" onclick="openPopup()">Subscribe to monthly newsletter</button>
     </div>
     <div id="ty">
-        <img src="./images/icon-success.svg" alt="">
+        <img src="./icon-success.svg" alt="">
         <h1 id="head">Thanks for subscribing!</h1>
         <p id="typ">A confirmation email has been sent to <b>your email</b>.Please open it and click the button inside to confirm your subscription. </p>
         <button id="dismiss" onclick="closePopup()">Dismiss message</button>
